--- a/TODO
+++ b/TODO
@@ -1,1 +1,5 @@
 improve user authentication system
+make cards with title and pic for each post and make separate page for detail view
+sort the cards by category
+peopleRanking algorithm for analyzing
+change color
